--- a/environment.yml
+++ b/environment.yml
@@ -1,44 +1,84 @@
-name: ml
+name: null
 channels:
   - defaults
 dependencies:
-  - asn1crypto=0.24.0=py36_0
-  - blas=1.0=mkl
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.4.16=py36_0
-  - cffi=1.11.5=py36h9745a5d_0
-  - cryptography=2.2.2=py36h14c3975_0
-  - idna=2.7=py36_0
-  - intel-openmp=2018.0.3=0
-  - libedit=3.1.20170329=h6b74fdf_2
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=7.2.0=hdf63c60_3
-  - libgfortran-ng=7.2.0=hdf63c60_3
-  - libstdcxx-ng=7.2.0=hdf63c60_3
-  - mkl=2018.0.3=1
-  - mkl_fft=1.0.1=py36h3010b51_0
-  - mkl_random=1.0.1=py36h629b387_0
-  - ncurses=6.1=hf484d3e_0
-  - numpy=1.14.5=py36hcd700cb_0
-  - numpy-base=1.14.5=py36hdbf6ddf_0
-  - openssl=1.0.2o=h20670df_0
-  - pandas=0.23.1=py36h637b7d7_0
-  - pip=10.0.1=py36_0
-  - pycparser=2.18=py36hf9f622e_1
-  - pyopenssl=18.0.0=py36_0
-  - pysocks=1.6.8=py36_0
-  - python=3.6.5=hc3d631a_2
-  - python-dateutil=2.7.3=py36_0
-  - pytz=2018.4=py36_0
-  - readline=7.0=ha6073c6_4
-  - scikit-learn=0.19.1=py36h7aa7ec6_0
-  - scipy=1.1.0=py36hfc37229_0
-  - setuptools=39.2.0=py36_0
-  - six=1.11.0=py36h372c433_1
-  - sqlite=3.24.0=h84994c4_0
-  - tk=8.6.7=hc745277_3
-  - urllib3=1.23=py36_0
-  - wheel=0.31.1=py36_0
-  - xz=5.2.4=h14c3975_4
-  - zlib=1.2.11=ha838bed_2
+  - alabaster=0.7.11
+  - asn1crypto=0.24.0
+  - babel=2.6.0
+  - blas=1.0
+  - ca-certificates=2018.03.07
+  - certifi=2018.4.16
+  - cffi=1.11.5
+  - chardet=3.0.4
+  - cryptography=2.2.2
+  - cycler=0.10.0
+  - cython=0.28.3
+  - dbus=1.13.2
+  - docutils=0.14
+  - expat=2.2.5
+  - fontconfig=2.12.6
+  - freetype=2.8
+  - glib=2.56.1
+  - gst-plugins-base=1.14.0
+  - gstreamer=1.14.0
+  - icu=58.2
+  - idna=2.7
+  - imagesize=1.0.0
+  - intel-openmp=2018.0.3
+  - jinja2=2.10
+  - jpeg=9b
+  - kiwisolver=1.0.1
+  - libedit=3.1.20170329
+  - libffi=3.2.1
+  - libgcc-ng=7.2.0
+  - libgfortran-ng=7.2.0
+  - libpng=1.6.34
+  - libstdcxx-ng=7.2.0
+  - libxcb=1.13
+  - libxml2=2.9.8
+  - markupsafe=1.0
+  - matplotlib=2.2.2
+  - mkl=2018.0.3
+  - mkl_fft=1.0.1
+  - mkl_random=1.0.1
+  - ncurses=6.1
+  - numpy=1.14.5
+  - numpy-base=1.14.5
+  - openssl=1.0.2o
+  - packaging=17.1
+  - pandas=0.23.1
+  - pcre=8.42
+  - pip=10.0.1
+  - pycparser=2.18
+  - pygments=2.2.0
+  - pyopenssl=18.0.0
+  - pyparsing=2.2.0
+  - pyqt=5.9.2
+  - pysocks=1.6.8
+  - python=3.6.5
+  - python-dateutil=2.7.3
+  - pytz=2018.4
+  - qt=5.9.5
+  - readline=7.0
+  - requests=2.19.1
+  - scikit-learn=0.19.1
+  - scipy=1.1.0
+  - setuptools=39.2.0
+  - sip=4.19.8
+  - six=1.11.0
+  - snowballstemmer=1.2.1
+  - sphinx=1.7.5
+  - sphinx_rtd_theme=0.4.0
+  - sphinxcontrib=1.0
+  - sphinxcontrib-websupport=1.1.0
+  - sqlite=3.24.0
+  - tk=8.6.7
+  - tornado=5.0.2
+  - urllib3=1.23
+  - wheel=0.31.1
+  - xz=5.2.4
+  - zlib=1.2.11
+  - pip:
+    - pyflann==1.6.13
+prefix: /home/sloscal1/workspace/ML-Prob-Perspective/ml
 
